Settings: Show ringtone per sim for multi sim device
Change-Id: I56244242cece2c0ab732a2edb8d8c57e9d2c29b3

Conflicts:
	res/values/cm_strings.xml
	src/com/android/settings/notification/NotificationSettings.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5811,6 +5811,7 @@
 
     <!-- Sound & notification > Sound section: Title for the option defining the phone ringtone. [CHAR LIMIT=30] -->
     <string name="ringtone_title">Phone ringtone</string>
+    <string name="sim_ringtone_title">SIM %d ringtone</string>
 
     <!-- Sound & notification > Sound section: Title for the option defining the default notification ringtone. [CHAR LIMIT=30] -->
     <string name="notification_ringtone_title">Default notification ringtone</string>
